Improve quality visualization, use time in x axis, remove old points too close, use a fixed precision in polylines.

--- a/ipyprogressivis/js/css/quality_visualization.css
+++ b/ipyprogressivis/js/css/quality_visualization.css
@@ -19,4 +19,5 @@
 
 .qaxis text {
     fill: black;
+    font-size: 8px;
 }
